[feat] 뉴스 단건 조회 기능 구현#1 (#52)
* feat:뉴스 단건 조회 기능 구현

* refactor:에러 수정 및 코드 중복 제거